# base-util

./: .clang-tidy  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  LICENSE  Makefile  README.md  configure
app/: CMakeLists.txt  main.cpp
cmake/: base-util-Config.cmake.in  base-util-config.cmake.in
include/base-util/: algo.hpp  colors.hpp  error.hpp  fs.hpp  graph.hpp  io.hpp  line-endings.hpp  logger.hpp  main.hpp  non-copyable.hpp  opt-util.hpp  stopwatch.hpp  string-util.hpp  string-util.inl  types.hpp
scripts/: base-util.vim  configure  ycm_extra_conf.py
src/: CMakeLists.txt  algo-par.cpp  conv-util.cpp  conv.cpp  datetime.cpp  fs.cpp  io.cpp  line-endings.cpp  logger.cpp  misc.cpp  net-util.cpp  net.cpp  stopwatch.cpp  string-util.cpp  string.cpp  util.cpp
src/include/base-util/: algo-par.hpp  algo.hpp  bimap.hpp  conv.hpp  datetime.hpp  error.hpp  fs.hpp  graph.hpp  io.hpp  keyval.hpp  line-endings.hpp  logger.hpp  macros.hpp  misc.hpp  mp.hpp  net-util.hpp  net.hpp  optional.hpp  pp.hpp  stopwatch.hpp  string-util.hpp  string.hpp  string.inl  type-map.hpp  types.hpp  util.hpp  variant.hpp
test/: CMakeLists.txt  algo.cpp  common.cpp  common.hpp  conv-catch.cpp  conv.cpp  fs.cpp  misc.cpp  net.cpp  string.cpp
test/data/: encode-base.txt  encode-inp.txt  lines-win.txt
test/infra/: common.hpp  main.cpp
tests/: algo.cpp  common.cpp  common.hpp  fs.cpp  misc.cpp  string.cpp
tests/data/: lines-unix.txt
